--- a/app/src/main/web/index.html
+++ b/app/src/main/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>is::Engine 3.1</title>
+    <title>is::Engine</title>
 	<link rel="icon" href="favicon.png">
 	<style>
 	canvas {
