--- a/app/src/main/web/index.html
+++ b/app/src/main/web/index.html
@@ -6,7 +6,7 @@
 	<title>is::Engine</title>
 	<link rel="icon" href="favicon.png">
 
-<!-- Uncomment when you use web push notification
+<!-- Uncomment to use web push notification
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
 	<script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
@@ -22,7 +22,7 @@
       Loading... 
     </canvas>
 	
-<!-- Uncomment when you use web push notification
+<!-- Uncomment to use web push notification
 	<hr>
 	<main>
 		<p>The push messaging. The button below allows you to activate / deactivate the push subscription.</p>
@@ -65,7 +65,7 @@
 
     <script async src="isengine.js"></script>
 	
-<!-- Uncomment when you use web push notification
+<!-- Uncomment to use web push notification
 	<script src="scripts/main.js"></script>
 	<script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 -->
